nullaway_error_f5a175ab-a1c5-4dec-b840-0dcd7cb8e243.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/AbstractInstanceRegistry.java:768: error: [NullAway] enhanced-for expression remoteRegions is @Nullable
            for (String remoteRegion : remoteRegions) {
                                       ^
